# r23

./: CMakeLists.txt  idea.txt  main.cpp  vcpkg.json
src/: CMakeLists.txt  main.cpp  main.h
src/graphics/: CMakeLists.txt  context.cpp  context.h
src/misc/: CMakeLists.txt  log.cpp  log.h
src/platform/: CMakeLists.txt  platform.h
src/platform/windows/: CMakeLists.txt  win32.cpp  win32.h
